syntax = "proto3";

message TimeFrame {
    int64 previous = 1;
    int64 current = 2;
}

